ap-south-1/ec2.tf
# EC2 Resources - Region: ap-south-1
# Generated by AWS Scanner

resource "aws_instance" "i_0b89a751f1eea383e" {
  ami           = "ami-02b8269d5e85954ef"
  instance_type = "t3.small"
  subnet_id     = "subnet-08bc26dbdf4401646"
  tags = {
    "Name" = "InfraSync-Backend"
  }
}

resource "aws_instance" "i_036957d9efbb69a1f" {
  ami           = "ami-02b8269d5e85954ef"
  instance_type = "t2.micro"
  subnet_id     = "subnet-08bc26dbdf4401646"
  tags = {
    "Name" = "Go-MicroService"
  }
}

resource "aws_instance" "i_012d15a88c9a3fbe7" {
  ami           = "ami-02b8269d5e85954ef"
  instance_type = "t2.small"
  subnet_id     = "subnet-0076bfae5064d10c2"
  tags = {
    "Name" = "frontend"
  }
}
