ap-south-1/vpc.tf
# VPC Resources - Region: ap-south-1
# Generated by AWS Scanner

resource "aws_vpc" "InfraSync" {
  cidr_block = "10.0.0.0/16"

  tags = {
    "Name" = "InfraSync"
  }
}

resource "aws_subnet" "InfraSync_Private_Subnet_1" {
  vpc_id            = "vpc-0ab97530cddd871d1"
  cidr_block        = "10.0.128.0/20"
  availability_zone = "ap-south-1a"

  tags = {
    "Name" = "InfraSync-Private-Subnet-1"
  }
}

resource "aws_subnet" "InfraSync_Public_Subnet_1" {
  vpc_id            = "vpc-0ab97530cddd871d1"
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    "Name" = "InfraSync-Public-Subnet-1"
  }
}

resource "aws_subnet" "InfraSync_Public_Subnet_1" {
  vpc_id            = "vpc-0ab97530cddd871d1"
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-south-1b"
  map_public_ip_on_launch = true

  tags = {
    "Name" = "InfraSync-Public-Subnet-1"
  }
}

resource "aws_subnet" "InfraSync_Private_Subnet_1" {
  vpc_id            = "vpc-0ab97530cddd871d1"
  cidr_block        = "10.0.144.0/20"
  availability_zone = "ap-south-1b"

  tags = {
    "Name" = "InfraSync-Private-Subnet-1"
  }
}

resource "aws_security_group" "InfraSync_ALB" {
  name        = "InfraSync-ALB-SG"
  description = "The Application Load Balances Security Group"
  vpc_id      = "vpc-0ab97530cddd871d1"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "InfraSync-ALB"
  }
}

resource "aws_security_group" "sg_051860e11c914f9be" {
  name        = "launch-wizard-1"
  description = "launch-wizard-1 created 2026-01-20T05:10:08.602Z"
  vpc_id      = "vpc-0ab97530cddd871d1"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "InfraSynce_DataBase" {
  name        = "InfraSync-Database-SG"
  description = "allows backed to DB connection "
  vpc_id      = "vpc-0ab97530cddd871d1"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "InfraSynce-DataBase"
  }
}

resource "aws_security_group" "InfraSync_Backend" {
  name        = "InfraSync-Backend-SG"
  description = "Backend SG "
  vpc_id      = "vpc-0ab97530cddd871d1"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "InfraSync-Backend"
  }
}

resource "aws_security_group" "InfraSync_GoMicroService" {
  name        = "InfraSync-Go-MicroService-SG"
  description = "InfraSync GoMicroService instance SG"
  vpc_id      = "vpc-0ab97530cddd871d1"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "InfraSync-GoMicroService"
  }
}

resource "aws_security_group" "InfraSync_Frontend" {
  name        = "InfraSync-Fontend-SG"
  description = "Frontend server"
  vpc_id      = "vpc-0ab97530cddd871d1"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["103.49.243.29/32"]
  }
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "InfraSync-Frontend"
  }
}

resource "aws_internet_gateway" "InfraSync_InternetGateway" {
  vpc_id = "vpc-0ab97530cddd871d1"

  tags = {
    "Name" = "InfraSync-InternetGateway"
  }
}

resource "aws_nat_gateway" "Infrasync_NatGateway" {
  allocation_id = "eipalloc-04433d4d74dd2a064"

  tags = {
    "Name" = "Infrasync-NatGateway"
  }
}

resource "aws_route_table" "InfraSync_Public_rtb" {
  vpc_id = "vpc-0ab97530cddd871d1"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-0e2c6252a0fa105d4"
  }

  tags = {
    "Name" = "InfraSync-Public-rtb"
  }
}

resource "aws_route_table" "InfraSync_Private_rtb" {
  vpc_id = "vpc-0ab97530cddd871d1"

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "nat-0fb3c5771c7b9c8a9"
  }
  route {
    gateway_id = "vpce-053709e36e910e206"
  }

  tags = {
    "Name" = "InfraSync-Private-rtb"
  }
}

resource "aws_route_table" "rtb_0d86cfccddc6c4b87" {
  vpc_id = "vpc-0ab97530cddd871d1"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-0e2c6252a0fa105d4"
  }
}
